--- a/testCSS.css
+++ b/testCSS.css
@@ -29,3 +29,13 @@
 .dropdown-active .dropdown-list {
     display: block;
 }
+
+#selectYear {
+    width: 50%;
+    padding: 8px;
+    box-sizing: border-box;
+    border: 1px solid #ddd;
+    cursor: pointer;
+    background-color: white;
+    text-align: left;
+}
