--- a/mapStyles.css
+++ b/mapStyles.css
@@ -1,3 +1,83 @@
 #map {
     height: 97vh;
 }
+
+.dragDropContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+    height: auto;
+    border: 2px dashed #ccc;
+    border-radius: 10px;
+    background-color: #f1f1f1;
+    padding: 20px;
+    position: relative;
+    width: 90%;
+    margin-top: 20px;
+}
+
+.cardContainer {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    width: 45%;
+    background-color: #9595e8;
+    height: 200px;
+}
+
+.card {
+    width: 100px;
+    height: 60px;
+    margin: 10px;
+    background-color: #f1f1f1;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    cursor: move;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+#dropArea {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding: 10px;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+    height: 200px;
+    border: 2px dashed #ccc;
+    border-radius: 10px;
+    background-color: #f1f1f1;
+    margin-left: 10px;
+}
+
+#top {
+    position: absolute;
+    top: -15px;
+    right: -15px;
+    padding: 10px 15px;
+    background-color: #ff6347;
+    color: white;
+    border: none;
+    border-radius: 50%;
+    cursor: pointer;
+    font-size: 16px;
+}
+#bottom {
+    position: absolute;
+    background-color: #47ff6f;
+    color: rgb(17, 15, 15);
+    border: none;
+    border-radius: 50%;
+    cursor: pointer;
+    font-size: 14px;
+    margin-left: 30px;
+}
+
+#hide:hover {
+    background-color: #ff4500;
+}
