--- a/Employment/Map/style.css
+++ b/Employment/Map/style.css
@@ -110,3 +110,21 @@
     margin-bottom: 20px;
     margin-top: 20px;
 }
+
+.legend {
+    background: white;
+    line-height: 1.5;
+    padding: 6px 8px;
+    font: 14px/16px;
+    font-family: 'Courier New', Courier, monospace;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+}
+
+.legend div {
+    width: 18px;
+    height: 18px;
+    float: left;
+    margin-right: 8px;
+    opacity: 0.7;
+}
