--- a/Employment/Map/style.css
+++ b/Employment/Map/style.css
@@ -1,3 +1,93 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+}
+
+.banner {
+    width: 100%;
+    height: 100vh;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.8)), url('Images/homeImage.jpg');
+    background-size: cover;
+    background-position: center;    
+}
+
+.logo {
+    width: 80px;
+    cursor: pointer;
+}
+
+.navbar {
+    width: 85%;
+    margin: auto;
+    padding: 35px 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.navbar a {
+    color: white;
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: 500;
+    margin: 0 15px;
+}
+
+.navbar ul li {
+    list-style: none;
+    display: inline-block;
+    margin: 0 20px;
+}   
+
+.navbar ul li a {
+    color: white;
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: 500;
+    text-transform: uppercase;
+}
+
+#arrowDown {
+    position: relative;
+    left: 45%;
+    right: 50%;
+    width: 10%;
+    margin-top: 5%;
+}
+
+.content h1 {
+    font-size: 50px;
+    color: rgb(55, 231, 11);
+    text-align: center;
+    margin-top: 0px;
+}
+
+.content p {
+    font-size: 20px;
+    color: rgb(252, 252, 252);
+    text-align: center;
+    margin-top: 20px;
+}
+
+button {
+    padding: 10px 20px;
+    font-size: 16px;
+    color: #fff;
+    background-color: #007bff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    margin-right: 10px;
+}
+
+button:hover {
+    background-color: #99e666;
+}
+
+
 #map {
     height: 97vh;
 }
@@ -27,7 +117,7 @@
 }
 
 .card {
-    width: 100px;
+    width: 25%;
     height: 60px;
     margin: 10px;
     background-color: #f1f1f1;
@@ -37,7 +127,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-
 }
 
 #dropArea {
@@ -66,16 +155,6 @@
     border-radius: 50%;
     cursor: pointer;
     font-size: 16px;
-}
-#bottom {
-    position: absolute;
-    background-color: #47ff6f;
-    color: rgb(17, 15, 15);
-    border: none;
-    border-radius: 50%;
-    cursor: pointer;
-    font-size: 14px;
-    margin-left: 300px;
 }
 
 #hide:hover {
@@ -106,11 +185,6 @@
     margin-right: 5px; /* Space between radio button and label */
 }
 
-#topDiv {
-    margin-bottom: 20px;
-    margin-top: 20px;
-}
-
 .legend {
     background: white;
     line-height: 1.5;
@@ -128,3 +202,57 @@
     margin-right: 8px;
     opacity: 0.7;
 }
+
+#topDiv {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+    background-color: hsl(132, 31%, 82%);
+    color: white;
+}
+
+.year-container {
+    display: flex;
+    align-items: center;
+}
+
+.year-container label {
+    margin-right: 10px;
+}
+
+#year {
+    padding: 5px;
+    border-radius: 5px;
+    border: none;
+}
+.drag-drop-container {
+    display: flex;
+    align-items: center;
+}
+
+.drag-drop-container img {
+    width: 20px;
+    height: 20px;
+    margin-right: 10px;
+    cursor: pointer;
+}
+
+.drag-drop-container label {
+    cursor: pointer;
+}
+
+#bottom {
+    border: 1px solid hsl(238, 84%, 46%);
+    border-radius: 5px;
+    background-color: hsl(138, 76%, 48%);
+    width: 20%;
+    height: 20%;
+}
+
+#topDiv label {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: black;
+    font-size: 80%;
+}
+
