--- a/Employment/Map/style.css
+++ b/Employment/Map/style.css
@@ -8,7 +8,7 @@
 .banner {
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.8)), url('Images/homeImage.jpg');
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.8)), url('');
     background-size: cover;
     background-position: center;    
 }
@@ -92,6 +92,7 @@ button:hover {
     height: 97vh;
 }
 
+/* Drag and Drop Area */
 .dragDropContainer {
     display: flex;
     flex-direction: row;
@@ -105,29 +106,35 @@ button:hover {
     position: relative;
     width: 90%;
     margin-top: 20px;
+    margin-left: 20px;
 }
 
-.cardContainer {
+#dragArea {
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
     width: 45%;
-    background-color: #9595e8;
+    background-color: #ccc;
     height: 200px;
+    border-radius: 10px;
+    border: 2px dashed #1518ea;
 }
 
 .card {
     width: 25%;
     height: 60px;
     margin: 10px;
-    background-color: #f1f1f1;
-    border: 1px solid #ccc;
+    background-color: #adf18b;
+    border: 1px solid #1518ea;
     border-radius: 5px;
     cursor: move;
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: 70%;
 }
+
+
 
 #dropArea {
     display: flex;
@@ -138,11 +145,21 @@ button:hover {
     align-items: center;
     width: 50%;
     height: 200px;
-    border: 2px dashed #ccc;
+    border: 2px dashed #1518ea;
     border-radius: 10px;
-    background-color: #f1f1f1;
+    background-color: #ccc;
     margin-left: 10px;
 }
+
+.legend {
+    position: absolute;
+    top: 5px;
+    left: 70%;
+    transform: translateX(-50%);
+    background-color: #fff;
+    padding: 0 10px;
+    font-weight: bold;
+}s
 
 #top {
     position: absolute;
@@ -159,15 +176,6 @@ button:hover {
 
 #hide:hover {
     background-color: #ff4500;
-}
-.legend {
-    position: absolute;
-    top: 5px;
-    left: 70%;
-    transform: translateX(-50%);
-    background-color: #fff;
-    padding: 0 10px;
-    font-weight: bold;
 }
 
 #radioDiv {
@@ -256,3 +264,29 @@ button:hover {
     font-size: 80%;
 }
 
+/* Media Queries for Small Devices */
+@media (max-width: 600px) {
+    #chart {
+        overflow-x: scroll;
+        padding-bottom: 10px;
+    }
+
+    .dragDropContainer {
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        padding: 10px;
+    }
+
+    #dragArea, #dropArea {
+        width: 100%;
+        height: auto;
+        margin: 10px 0;
+    }
+
+    .card {
+        width: 45%;
+        height: 50px;
+        margin: 5px;
+    }
+}
