--- a/Employment/Map/style.css
+++ b/Employment/Map/style.css
@@ -1,23 +1,27 @@
+/* General styles */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
+/* Banner styles */
 .banner {
     width: 100%;
     height: 100vh;
     background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.8)), url('');
     background-size: cover;
-    background-position: center;    
+    background-position: center;
 }
 
+/* Logo styles */
 .logo {
     width: 80px;
     cursor: pointer;
 }
 
+/* Navbar styles */
 .navbar {
     width: 85%;
     margin: auto;
@@ -39,7 +43,7 @@
     list-style: none;
     display: inline-block;
     margin: 0 20px;
-}   
+}
 
 .navbar ul li a {
     color: white;
@@ -49,6 +53,7 @@
     text-transform: uppercase;
 }
 
+/* Arrow down icon styles */
 #arrowDown {
     position: relative;
     left: 45%;
@@ -57,6 +62,7 @@
     margin-top: 5%;
 }
 
+/* Content styles */
 .content h1 {
     font-size: 50px;
     color: rgb(55, 231, 11);
@@ -71,6 +77,7 @@
     margin-top: 20px;
 }
 
+/* Button styling */
 button {
     padding: 10px 20px;
     font-size: 16px;
@@ -87,7 +94,7 @@ button:hover {
     background-color: #99e666;
 }
 
-
+/* Map container styling */
 #map {
     height: 97vh;
 }
@@ -134,8 +141,6 @@ button:hover {
     font-size: 70%;
 }
 
-
-
 #dropArea {
     display: flex;
     flex-direction: row;
@@ -159,25 +164,13 @@ button:hover {
     background-color: #fff;
     padding: 0 10px;
     font-weight: bold;
-}s
-
-#top {
-    position: absolute;
-    top: -15px;
-    right: -15px;
-    padding: 10px 15px;
-    background-color: #ff6347;
-    color: white;
-    border: none;
-    border-radius: 50%;
-    cursor: pointer;
-    font-size: 16px;
 }
 
 #hide:hover {
     background-color: #ff4500;
 }
 
+/* Radio button container */
 #radioDiv {
     display: flex;
     flex-wrap: wrap;
@@ -193,6 +186,7 @@ button:hover {
     margin-right: 5px; /* Space between radio button and label */
 }
 
+/* Legend styling */
 .legend {
     background: white;
     line-height: 1.5;
@@ -211,6 +205,7 @@ button:hover {
     opacity: 0.7;
 }
 
+/* Top bar styling */
 #topDiv {
     display: flex;
     justify-content: space-between;
@@ -234,6 +229,7 @@ button:hover {
     border-radius: 5px;
     border: none;
 }
+
 .drag-drop-container {
     display: flex;
     align-items: center;
